--- a/.gitignore
+++ b/.gitignore
@@ -84,9 +84,6 @@ dist
 
 # Gatsby files
 .cache/
-# Comment in the public line in if your project uses Gatsby and *not* Next.js
-# https://nextjs.org/blog/next-9-1#public-directory-support
-# public
 
 # vuepress build output
 .vuepress/dist
@@ -100,5 +97,11 @@ dist
 # DynamoDB Local files
 .dynamodb/
 
-# TernJS port file
-.tern-port
+# System and Hexo files
+.DS_Store
+Thumbs.db
+db.json
+*.log
+public/
+.deploy*/
+
